--- a/assets/css/curr-selector.css
+++ b/assets/css/curr-selector.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Muli');
+@import url("https://fonts.googleapis.com/css?family=Muli");
 body {
   font-family: Arial;
-  font-family: 'Muli', sans-serif;
+  font-family: "Muli", sans-serif;
 }
-
 
 .nav-wrapper {
   /* border: solid 1px green; */
@@ -17,7 +16,7 @@ body {
 }
 .sl-nav ul {
   /* border: solid 1px red; */
-  margin:0;
+  margin: 0;
   padding: 0;
   list-style: none;
   position: relative;
@@ -26,7 +25,7 @@ body {
 /* above this line for currency dropwdown */
 .sl-nav li {
   cursor: pointer;
-  padding-bottom:0;
+  padding-bottom: 0;
   height: 100%;
 }
 .sl-nav li ul {
@@ -35,42 +34,42 @@ body {
 .sl-nav li:hover ul {
   position: absolute;
   top: 45px;
-  right:-15px;
+  right: -15px;
   display: block;
   background: #fff;
   width: 200px;
   padding-top: 0px;
   z-index: 1;
-  border-radius:5px;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 .sl-nav li:hover .triangle {
   position: absolute;
   top: 33px;
   right: -10px;
-  z-index:10;
+  z-index: 10;
   height: 14px;
-  overflow:hidden;
+  overflow: hidden;
   width: 30px;
   background: transparent;
 }
 .sl-nav li:hover .triangle:after {
-  content: '';
+  content: "";
   display: block;
   z-index: 20;
   width: 15px;
   transform: rotate(45deg) translateY(0px) translatex(10px);
   height: 15px;
   background: #fff;
-  border-radius:2px 0px 0px 0px;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+  border-radius: 2px 0px 0px 0px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 .sl-nav li ul li {
   position: relative;
   text-align: left;
   background: transparent;
   padding: 15px 15px;
-  padding-bottom:0;
+  padding-bottom: 0;
   z-index: 2;
   font-size: 15px;
   color: #3c3c3c;
@@ -81,12 +80,13 @@ body {
 .sl-nav li ul li span {
   padding-left: 5px;
 }
-.sl-nav li ul li span:hover, .sl-nav li ul li span.active {
+.sl-nav li ul li span:hover,
+.sl-nav li ul li span.active {
   color: #146c78;
 }
 .sl-flag {
   display: inline-block;
-  box-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
   width: 15px;
   height: 15px;
   background: #aaa;
@@ -97,31 +97,24 @@ body {
 }
 
 .flag-gb {
-  background: url('https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg');
+  background: url("https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg");
   background-size: cover;
   background-position: center center;
 }
 .flag-usa {
-    background: url('https://lipis.github.io/flag-icon-css/flags/4x3/um.svg');
-    background-size: cover;
-    background-position: center center;
-}
-.flag-ru {
-  background: url('https://lipis.github.io/flag-icon-css/flags/4x3/ru.svg');
+  background: url("https://lipis.github.io/flag-icon-css/flags/4x3/um.svg");
   background-size: cover;
   background-position: center center;
 }
-.flag-cn {
-  background: url('https://lipis.github.io/flag-icon-css/flags/4x3/cn.svg');
+.flag-eu {
+  background: url("https://lipis.github.io/flag-icon-css/flags/4x3/eu.svg");
   background-size: cover;
   background-position: center center;
 }
-
 
 /* USER ICON */
 
-
-@import url('https://fonts.googleapis.com/css?family=Muli');
+@import url("https://fonts.googleapis.com/css?family=Muli");
 .nav-wrapper2 {
   /* border: solid 1px green; */
   width: auto;
@@ -132,8 +125,8 @@ body {
 }
 .sl-nav2 ul {
   /* border: solid 1px red; */
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   list-style: none;
   position: relative;
   display: inline-block;
@@ -147,15 +140,15 @@ body {
 }
 .sl-nav2 li:hover ul {
   position: absolute;
-  top:43px;
-  right:-15px;
+  top: 43px;
+  right: -15px;
   display: block;
   background: #fff;
   width: 200px;
   padding-top: 0px;
   z-index: 1;
-  border-radius:5px;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 .sl-nav2 li:hover .triangle2 {
   position: absolute;
@@ -168,22 +161,22 @@ body {
   background: transparent;
 }
 .sl-nav2 li:hover .triangle2:after {
-  content: '';
+  content: "";
   display: block;
   z-index: 20;
   width: 15px;
   transform: rotate(45deg) translateY(0px) translatex(10px);
   height: 15px;
   background: #fff;
-  border-radius:2px 0px 0px 0px;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+  border-radius: 2px 0px 0px 0px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 .sl-nav2 li ul li {
   position: relative;
   text-align: left;
   background: transparent;
   padding: 15px 15px;
-  padding-bottom:0;
+  padding-bottom: 0;
   z-index: 2;
   font-size: 15px;
   color: #3c3c3c;
@@ -194,6 +187,11 @@ body {
 .sl-nav2 li ul li span {
   padding-left: 5px;
 }
-.sl-nav2 li ul li span:hover, .sl-nav2 li ul li span.active {
+.sl-nav2 li ul li span:hover,
+.sl-nav2 li ul li span.active {
   color: #146c78;
+}
+.dropdownPre {
+  font-size: 20px;
+  padding-bottom: 12px;
 }
